# Maze-Runner

./: .gitignore  CMakeLists.txt  OUTDOOR_SCENE_SPECIFICATION.md  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  MazeRunner  cmake_install.cmake
_codeql_build_dir/shaders/: vertex.glsl
include/glad/: glad.h
report/: MAZE_RUNNER_PRESENTATION.md  MAZE_RUNNER_REPORT.md  QUICKSTART.md  README.md  SUMMARY.md  convert_to_pdf.sh  convert_to_pptx.sh
shaders/: fragment.glsl  hud_vertex.glsl  minimap_fragment.glsl  minimap_vertex.glsl  vertex.glsl
src/: Collectible.cpp  Collectible.h  HandRenderer.cpp  HandRenderer.h  Highscore.h  Maze.cpp  Maze.h  Minimap.cpp  Minimap.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SkyRenderer.cpp  SkyRenderer.h  StarRating.h  TitleScreen.cpp  TitleScreen.h  TorchLight.cpp  TorchLight.h  glad.c  main.cpp
